# dolar-api

./: .gitignore  LICENSE  pyproject.toml
src/dolar/: asgi.py  settings.py  urls.py  wsgi.py
src/rates/: models.py  scraper.py  serializers.py  urls.py  views.py
src/rates/management/commands/: scrape_rates.py
src/rates/migrations/: 0001_initial.py
